apps/manifest/ingress-polaris.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: argocd
    alb.ingress.kubernetes.io/group.order: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 8080}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:292029882946:certificate/39393ac6-c9ae-4475-83c8-93d866015904"
spec:
  rules:
  - host: "app.lacoyart.online"
    http:
      paths:
      - path: /
        backend:
          service:
            name: service-2048
            port:
              number: 443
        pathType: Prefix
  - host: "dashboard.lacoyart.online"
    http:
      paths:
      - path: /
        backend:
          service:
            name: polaris-dashboard
            port:
              number: 8080
        pathType: Prefix
  tls:
  - hosts:
    - app.lacoyart.online
    - dashboard.lacoyart.online
